--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,11 +27,17 @@ dist.jar=${dist.dir}/ndim.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.jai_windows-i586.jar=lib/jai_windows-i586.jar
+file.reference.jai_codec.jar=C:\\Program Files (x86)\\Sun Microsystems\\Java Advanced Imaging 1.1.3\\lib\\jai_codec.jar
+file.reference.jai_core.jar=C:\\Program Files (x86)\\Sun Microsystems\\Java Advanced Imaging 1.1.3\\lib\\jai_core.jar
+file.reference.mlibwrapper_jai.jar=C:\\Program Files (x86)\\Sun Microsystems\\Java Advanced Imaging 1.1.3\\lib\\mlibwrapper_jai.jar
 includes=**
+jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
+jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${file.reference.jai_windows-i586.jar}
+    ${file.reference.jai_codec.jar}:\
+    ${file.reference.jai_core.jar}:\
+    ${file.reference.mlibwrapper_jai.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -55,9 +61,18 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+jnlp.codebase.type=no.codebase
+jnlp.descriptor=application
+jnlp.enabled=false
+jnlp.mixed.code=default
+jnlp.offline-allowed=false
+jnlp.signed=false
+jnlp.signing=
+jnlp.signing.alias=
+jnlp.signing.keystore=
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=true
-platform.active=default_platform
+platform.active=JDK_1.6
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
